Delete dummy files

--- a/02_transform_restaurant/02_transform_restaurant.ipynb
+++ b/02_transform_restaurant/02_transform_restaurant.ipynb
@@ -1565,7 +1565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As can be observed from above analysis, there are many repeated restaurant names in the restaurant data. Hence we can seperate them into a seperate table with only restaurant name tracked by restaurant_id. This restaurant_id will then be mapped back into the restaurant address table. The restaurant address table will be tracked by unique restaurant address IDs. The restaurant address IDs are set as serial type in the database, hence it will be auto-generated once the table is loaded into the database."
+    "As can be observed from above analysis, there are many repeated restaurant names in the restaurant data. Hence we can seperate them into a seperate table with only restaurant name tracked by restaurant_id. **This allows us to enforce referential integrity between restaurant addresses and restaurant name in our sql database**. The restaurant_id will then be mapped back into the restaurant address table. The restaurant address table will be tracked by unique restaurant address IDs. The restaurant address IDs are set as serial type in the database, hence it will be auto-generated once the table is loaded into the database."
    ]
   },
   {
